# anime-cleaner

./: .env.example  .gitignore  Dockerfile  Readme.md  config.py  docker-compose.yml  main.py  processors.py  pyproject.toml  scheduler.py  utils.py
.github/workflows/: docker-publish.yml
