[tool.poetry]
name = "anime-fixer"
version = "0.1.0"
description = "A video processing script that uses mkvmerge to set default language and subtitle tracks."
authors = ["Your Name <youremail@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
